# opengl2-animation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  report.docx  run_csse_lab  ~$report.docx  ~WRL1919.tmp
OpenGLProject/: OpenGLProject.sln
OpenGLProject/Debug/: OpenGLProject.ilk
OpenGLProject/OpenGLProject/: OpenGLProject.vcxproj  Teapot.cpp  joh29Animation  joh29_animation  main.cpp  oldmain.cpp
OpenGLProject/OpenGLProject/Debug/: OpenGLProject.exe.recipe  main.obj.enc  vc142.idb
OpenGLProject/OpenGLProject/Debug/OpenGLProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
